--- a/target-ar-sample/src/main/AndroidManifest.xml
+++ b/target-ar-sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.iarsdksamples">
+    package="com.example.target_ar_sample">
 
     <application
         android:allowBackup="true"
