--- a/settings.gradle
+++ b/settings.gradle
@@ -10,11 +10,19 @@ pluginManagement {
         id 'org.jetbrains.kotlin.android' version '1.5.21'
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'https://pkgs.dev.azure.com/xenoholographicit/ImagineAR/_packaging/iar_sdk/maven/v1'
+            credentials {
+                username "xenoholographicit"
+                password "btw73yovncctbo2laomwii6k2pv7astxl3cchssn2kthueiszidq"
+            }
+        }
     }
 }
 rootProject.name = "IAR SDK Samples"
