--- a/core-sample/build.gradle
+++ b/core-sample/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
+    id 'kotlin-android'
 }
 
 android {
@@ -49,6 +50,8 @@ dependencies {
 
     // DI lib
     implementation "com.google.dagger:hilt-android:2.38.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
 
     // Navigation components dependencies
