--- a/target-ar-sample/build.gradle
+++ b/target-ar-sample/build.gradle
@@ -9,8 +9,8 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.iarsdksamples"
-        minSdk 21
+        applicationId "com.iar.iarsdksamples"
+        minSdk 26
         targetSdk 31
         versionCode 1
         versionName "1.0"
