--- a/target-ar-sample/src/main/AndroidManifest.xml
+++ b/target-ar-sample/src/main/AndroidManifest.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.target_ar_sample">
+    package="com.iar.target_ar_sample">
 
     <application
         android:allowBackup="true"
-        android:name=".MyApplication"
+        android:name="com.iar.target_ar_sample.MyApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IARSDKSamples">
         <activity
-            android:name=".ui.activities.MainActivity"
+            android:name="com.iar.target_ar_sample.ui.activities.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="true"
-            android:label="@string/title_activity_main"
+            android:label="@string/app_name"
             android:theme="@style/Theme.IARSDKSamples.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
