--- a/core-sample/build.gradle
+++ b/core-sample/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.core_sample"
-        minSdk 21
+        minSdk 26
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -32,6 +32,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -50,9 +54,11 @@ dependencies {
 
     // DI lib
     implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // Navigation components dependencies
     def nav_version = "2.3.5"
@@ -66,4 +72,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // IAR dependencies
+    implementation 'com.imaginear.iar:iar_core-dev:1.5.8-dev'
 }
