--- a/core-sample/src/main/AndroidManifest.xml
+++ b/core-sample/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IARSDKSamples">
-        <activity android:name="com.iar.core_sample.ui.MainActivity"
+        <activity android:name="com.iar.core_sample.ui.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
