IAR-4886 Added target AR activity and an overlay fragment.

--- a/target-ar-sample/build.gradle
+++ b/target-ar-sample/build.gradle
@@ -65,8 +65,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // IAR dependencies
-    implementation 'com.imaginear.iar:iar_core-dev:1.5.6-dev'
-    implementation 'com.imaginear.iar:iar_sdk-dev:1.5.6-dev'
+    implementation 'com.imaginear.iar:iar_core-dev:1.5.8-dev'
+    implementation 'com.imaginear.iar:iar_sdk-dev:1.5.8-dev'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.0'
@@ -76,6 +76,7 @@ dependencies {
     implementation 'com.google.android.filament:filament-android:1.12.7'
     implementation 'com.google.android.filament:filament-utils-android:1.12.7'
     implementation 'com.google.android.filament:gltfio-android:1.12.7'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
