--- a/pr-pipeline.yml
+++ b/pr-pipeline.yml
@@ -22,7 +22,7 @@ steps:
     gradleOptions: '-Xmx3072m'
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
-    tasks: 'assembleDebug'
+    tasks: 'assembleDebug testDebugUnitTest'
 
 - task: Gradle@3
   inputs:
@@ -31,13 +31,13 @@ steps:
     gradleOptions: '-Xmx3072m'
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
-    tasks: 'assembleDebug'
+    tasks: 'assembleDebug testDebugUnitTest'
 
 - task: Gradle@3
   inputs:
     gradleWrapperFile: 'gradlew'
     workingDirectory: 'surface-ar-sample/'
     gradleOptions: '-Xmx3072m'
-    tasks: 'assembleDebug'
+    tasks: 'assembleDebug testDebugUnitTest'
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
