Added pipeline env variables for PAT

--- a/pr-pipeline.yml
+++ b/pr-pipeline.yml
@@ -16,6 +16,8 @@ pool:
 
 steps:
 - task: Gradle@2
+  env:
+    ACCESS_TOKEN: $(accessToken)
   inputs:
     gradleWrapperFile: 'gradlew'
     workingDirectory: 'target-ar-sample/'
@@ -25,6 +27,8 @@ steps:
     tasks: 'assembleDebug testDebugUnitTest'
 
 - task: Gradle@3
+  env:
+    ACCESS_TOKEN: $(accessToken)
   inputs:
     gradleWrapperFile: 'gradlew'
     workingDirectory: 'core-sample/'
@@ -34,6 +38,8 @@ steps:
     tasks: 'assembleDebug testDebugUnitTest'
 
 - task: Gradle@3
+  env:
+    ACCESS_TOKEN: $(accessToken)
   inputs:
     gradleWrapperFile: 'gradlew'
     workingDirectory: 'surface-ar-sample/'
