--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,17 @@ pluginManagement {
     }
 }
 
-def accessToken = System.getenv("ACCESS_TOKEN") ?: ACCESS_TOKEN
+def getLocalProperties() {
+    Properties props = new Properties()
+    if (file('local.properties').exists()) {
+        props.load(new FileInputStream(file('local.properties')))
+    }
+    return props
+}
+
+Properties localProps = getLocalProperties()
+
+def accessToken = System.getenv("ACCESS_TOKEN") ?: localProps["accessToken"]
 
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
