--- a/core-sample/build.gradle
+++ b/core-sample/build.gradle
@@ -92,4 +92,7 @@ dependencies {
 
     //Preference
     implementation 'androidx.preference:preference:1.1.1'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
