--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
 
 - task: AppCenterDistribute@3
   inputs:
-    serverEndpoint: 'IAR SDK App Center'
+    serverEndpoint: 'IAR SDK Target App Center - Android'
     appSlug: 'iversoft-team/IAR-SDK-Target-Example-Android'
     appFile: './target-ar-sample/build/outputs/apk/release/target-ar-sample-release-unsigned.apk'
     symbolsOption: 'Android'
