--- a/core-sample/src/main/AndroidManifest.xml
+++ b/core-sample/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iar.core_sample">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name="com.iar.core_sample.CoreApplication"
         android:allowBackup="true"
