--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,17 +1,14 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'dagger.hilt.android.plugin'
-    id 'kotlin-kapt'
 }
 
 android {
-    compileSdk 31
+    compileSdkVersion 31
 
     defaultConfig {
-        applicationId "com.example.surface_ar"
-        minSdk 26
-        targetSdk 31
+        minSdkVersion 21
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -47,12 +44,6 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.4.0"
     implementation "androidx.fragment:fragment-ktx:1.4.0"
 
-    // DI lib
-    implementation "com.google.dagger:hilt-android:2.38.1"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation project(path: ':common')
-    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
-
     // Navigation components dependencies
     def nav_version = "2.3.5"
     // Java navigation component deps
@@ -62,27 +53,14 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    // IAR dependencies
+    // IAR deps
     implementation 'com.imaginear.iar:iar_core-dev:1.5.8-dev'
-    implementation 'com.imaginear.iar:surface_sdk-dev:1.5.8-dev'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
     implementation 'com.squareup.retrofit2:converter-scalars:2.7.1'
-    implementation 'com.google.android.filament:filament-android:1.12.7'
-    implementation 'com.google.android.filament:filament-utils-android:1.12.7'
-    implementation 'com.google.android.filament:gltfio-android:1.12.7'
-    implementation 'androidx.preference:preference-ktx:1.1.1'
-
-    // Additional surface SDK deps
-    api 'com.google.ar:core:1.21.0'
-    api 'io.arrow-kt:arrow-fx:0.11.0'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.3.9-native-mt-2'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.9'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
