--- a/core-sample/build.gradle
+++ b/core-sample/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 
     // DI lib
     implementation "com.google.dagger:hilt-android:2.38.1"
+    implementation project(path: ':common')
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
