--- a/target-ar-sample/build.gradle
+++ b/target-ar-sample/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     // DI lib
     implementation "com.google.dagger:hilt-android:2.38.1"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation project(path: ':common')
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
 
     // Navigation components dependencies
