--- a/surface-ar-sample/build.gradle
+++ b/surface-ar-sample/build.gradle
@@ -31,6 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -64,7 +67,7 @@ dependencies {
 
     // IAR dependencies
     implementation 'com.imaginear.iar:iar_core-dev:1.5.8-dev'
-    implementation 'com.imaginear.iar:surface_sdk-dev:1.5.8-dev'
+    implementation 'com.imaginear.iar:iar_sdk_surface-dev:1.5.8-dev'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.0'
