--- a/surface-ar-sample/src/main/AndroidManifest.xml
+++ b/surface-ar-sample/src/main/AndroidManifest.xml
@@ -8,6 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.IARSDKSamples" />
+        android:name=".MyApplication"
+        android:theme="@style/Theme.IARSDKSamples">
+        <activity android:name="com.iar.surface_ar_sample.ui.activities.MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
