--- a/core-sample/build.gradle
+++ b/core-sample/build.gradle
@@ -89,6 +89,7 @@ dependencies {
 
     // IAR dependencies
     implementation 'com.imaginear.iar:iar_core-dev:1.5.8-dev'
+    implementation 'com.imaginear.iar:iar_sdk_surface-dev:1.5.8-dev'
 
     //Preference
     implementation 'androidx.preference:preference:1.1.1'
