--- a/surface-ar-sample/src/main/AndroidManifest.xml
+++ b/surface-ar-sample/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iar.surface_ar_sample">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +17,26 @@
         android:supportsRtl="true"
         android:name=".MyApplication"
         android:theme="@style/Theme.IARSDKSamples">
+
+        <meta-data
+            android:name="com.google.ar.core"
+            android:value="required" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+        <provider
+            android:name=".utils.AssetsProvider"
+            android:authorities="com.iar.surface_ar_sample"
+            android:exported="true"
+            android:grantUriPermissions="true" />
+
         <activity android:name="com.iar.surface_ar_sample.ui.activities.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -18,6 +45,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.activities.SurfaceARActivity"/>
     </application>
 
 </manifest>
