--- a/target-ar-sample/build.gradle
+++ b/target-ar-sample/build.gradle
@@ -34,6 +34,12 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    // We use the .filamat extension for materials compiled with matc
+    // Telling aapt to not compress them allows to load them efficiently
+    aaptOptions {
+        noCompress 'filamat', 'ktx'
+    }
 }
 
 dependencies {
