--- a/surface-ar-sample/build.gradle
+++ b/surface-ar-sample/build.gradle
@@ -74,10 +74,10 @@ dependencies {
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
     // IAR dependencies
-//    implementation 'com.imaginear.iar:iar_core-dev:1.5.8-dev'
-//    implementation 'com.imaginear.iar:iar_sdk_surface-dev:1.5.8-dev'
-    implementation project(':iar-core')
-    implementation project(':surface-sdk')
+    implementation 'com.imaginear.iar:iar_core-dev:1.5.8-dev'
+    implementation 'com.imaginear.iar:iar_sdk_surface-dev:1.5.8-dev'
+//    implementation project(':iar-core')
+//    implementation project(':surface-sdk')
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
