--- a/appcenter-surface.yml
+++ b/appcenter-surface.yml
@@ -34,7 +34,8 @@ steps:
 - task: AppCenterDistribute@3
   inputs:
     serverEndpoint: 'IAR SDK Surface App Center - Android'
-    appSlug: 'iversoft-team/IAR-SDK-Surface-Example-Android'
+    appSlug: $(appslug)
+
     appFile: './surface-ar-sample/build/outputs/apk/release/surface-ar-sample-release-unsigned.apk'
     symbolsOption: 'Android'
     releaseNotesOption: 'input'
