--- a/core-sample/src/main/AndroidManifest.xml
+++ b/core-sample/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IARSDKSamples">
         <activity android:name="com.iar.core_sample.ui.activities.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
