--- a/surface-ar-sample/src/main/AndroidManifest.xml
+++ b/surface-ar-sample/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyApplication"
         android:theme="@style/Theme.IARSDKSamples">
 
         <meta-data
@@ -37,8 +37,10 @@
             android:exported="true"
             android:grantUriPermissions="true" />
 
-        <activity android:name="com.iar.surface_ar_sample.ui.activities.MainActivity"
-            android:exported="true">
+        <activity
+            android:name="com.iar.surface_ar_sample.ui.activities.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -46,7 +48,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.activities.SurfaceARActivity"/>
+        <activity
+            android:name=".ui.activities.SurfaceARActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
