IAR-5292 Fix the bug “User” button is not working for Target app

--- a/target-ar-sample/src/main/AndroidManifest.xml
+++ b/target-ar-sample/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:allowBackup="true"
         android:name="com.iar.target_ar_sample.MyApplication"
         android:icon="@mipmap/ic_launcher"
+
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -24,8 +25,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.IARSDKSamples.Fullscreen">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
