--- a/common/build.gradle
+++ b/common/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // IAR deps
-    implementation 'com.imaginear.iar:iar_core-dev:1.6.8-dev'
+    implementation 'com.github.ImagineAR:iar-core-android:1.5.2'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
