--- a/core-sample/build.gradle
+++ b/core-sample/build.gradle
@@ -89,9 +89,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // IAR dependencies
-    implementation 'com.imaginear.iar:iar_core-dev:1.6.8-dev'
-    implementation 'com.imaginear.iar:iar_sdk_surface-dev:1.6.8-dev'
+    implementation 'com.github.ImagineAR:iar-core-android:1.5.2'
+    implementation 'com.github.ImagineAR:iar-surface-android:1.5.2'
 
     //Preference
     implementation 'androidx.preference:preference:1.1.1'
+
 }
