Update azure-pipelines.yml for Azure Pipelines
Updated the AppCenter account token

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
 
 - task: AppCenterDistribute@3
   inputs:
-    serverEndpoint: 'IAR SDK Target App Center - Android'
+    serverEndpoint: 'Azure Pipline - IAR SDK Target Sample App - Android'
     appSlug: $(appslug)
     appFile: './target-ar-sample/build/outputs/apk/release/target-ar-sample-release-unsigned.apk'
     symbolsOption: 'Android'
