IAR-5777 Set ARCore as optional and add NFC comment

--- a/surface-ar-sample/src/main/AndroidManifest.xml
+++ b/surface-ar-sample/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
         <meta-data
             android:name="com.google.ar.core"
-            android:value="required" />
+            android:value="optional" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
