--- a/surface-ar-sample/build.gradle
+++ b/surface-ar-sample/build.gradle
@@ -78,6 +78,11 @@ dependencies {
 
     implementation 'com.github.ImagineAR:iar-core-android:1.5.4'
     implementation 'com.github.ImagineAR:iar-surface-android:1.5.4'
+
+    /*
+    Adding the NFC capability might severely reduce the amount of compatible devices with your application.
+    See details: https://docs.imaginear.com/docs/v1.5/android/custom-ar#customize-experiences-using-nfc
+    */
     implementation 'com.github.ImagineAR:iar-nfc-android:1.5.4'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
@@ -92,7 +97,7 @@ dependencies {
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
     // Additional surface SDK deps
-    api 'com.google.ar:core:1.21.0'
+    api 'com.google.ar:core:1.31.0'
     api 'io.arrow-kt:arrow-fx:0.11.0'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.3.9-native-mt-2'
