--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,12 @@
 
 trigger: none
 
-pr: none
+#PR Trigger
+pr:
+  branches:
+    include:
+    - master
+    - develop
 
 pool:
   vmImage: 'macos-latest'
