--- a/surface-ar-sample/build.gradle
+++ b/surface-ar-sample/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation project(path: ':common')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
 
     // Navigation components dependencies
