--- a/core-sample/build.gradle
+++ b/core-sample/build.gradle
@@ -89,8 +89,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // IAR dependencies
-    implementation 'com.github.ImagineAR:iar-core-android:1.5.4'
-    implementation 'com.github.ImagineAR:iar-surface-android:1.5.4'
+//    implementation 'com.github.ImagineAR:iar-core-android:1.5.4'
+//    implementation 'com.github.ImagineAR:iar-surface-android:1.5.4'
+
+    implementation 'com.imaginear.iar:iar_core-dev:1.6.11-dev'
+    implementation 'com.imaginear.iar:iar_sdk_surface-dev:1.6.11-dev'
 
     //Preference
     implementation 'androidx.preference:preference:1.1.1'
