--- a/surface-ar-sample/build.gradle
+++ b/surface-ar-sample/build.gradle
@@ -76,9 +76,13 @@ dependencies {
     // required to avoid crash on Android 12 API 31
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
-    implementation 'com.github.ImagineAR:iar-core-android:1.5.4'
-    implementation 'com.github.ImagineAR:iar-surface-android:1.5.4'
-    implementation 'com.github.ImagineAR:iar-nfc-android:1.5.4'
+//    implementation 'com.github.ImagineAR:iar-core-android:1.5.4'
+//    implementation 'com.github.ImagineAR:iar-surface-android:1.5.4'
+//    implementation 'com.github.ImagineAR:iar-nfc-android:1.5.4'
+
+    implementation 'com.imaginear.iar:iar_core-dev:1.6.11-dev'
+    implementation 'com.imaginear.iar:iar_sdk_surface-dev:1.6.11-dev'
+    implementation 'com.imaginear.iar:iar_nfc-dev:1.6.11-dev'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
