--- a/core-sample/build.gradle
+++ b/core-sample/build.gradle
@@ -92,8 +92,8 @@ dependencies {
 //    implementation 'com.github.ImagineAR:iar-core-android:1.5.4'
 //    implementation 'com.github.ImagineAR:iar-surface-android:1.5.4'
 
-    implementation 'com.imaginear.iar:iar_core-dev:1.6.11-dev'
-    implementation 'com.imaginear.iar:iar_sdk_surface-dev:1.6.11-dev'
+    implementation 'com.github.ImagineAR:iar-core-android-beta:1.6.0'
+    implementation 'com.github.ImagineAR:iar-surface-android-beta:1.6.0'
 
     //Preference
     implementation 'androidx.preference:preference:1.1.1'
