--- a/target-ar-sample/build.gradle
+++ b/target-ar-sample/build.gradle
@@ -78,8 +78,8 @@ dependencies {
 //    implementation 'com.github.ImagineAR:iar-core-android:1.5.4'
 //    implementation 'com.github.ImagineAR:iar-target-android:1.5.4'
 
-    implementation 'com.imaginear.iar:iar_core-dev:1.6.11-dev'
-    implementation 'com.imaginear.iar:iar_sdk-dev:1.6.11-dev'
+    implementation 'com.github.ImagineAR:iar-core-android-beta:1.6.0'
+    implementation 'com.github.ImagineAR:iar-target-android-beta:1.6.0'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
