--- a/surface-ar-sample/src/main/AndroidManifest.xml
+++ b/surface-ar-sample/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IARSDKSamples">
         <activity
-            android:name=".ui.activities.PreviewVideoActivity"
+            android:name="com.iar.common.PreviewVideoActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
 
