--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,7 +13,7 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 31
-        versionCode 6
+        versionCode 7
         versionName "1.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -75,7 +75,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // IAR deps
-    implementation 'com.github.ImagineAR:iar-core-android-beta:1.7.4'
+    implementation 'com.github.ImagineAR:iar-core-android:1.7.0'
+ //   implementation 'com.github.ImagineAR:iar-core-android-beta:1.7.4'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
