--- a/core-sample/build.gradle
+++ b/core-sample/build.gradle
@@ -14,7 +14,7 @@ android {
         applicationId "com.example.core_sample"
         minSdk 21
         targetSdk 31
-        versionCode 11
+        versionCode 12
         versionName "1.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -89,8 +89,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // IAR dependencies
-    implementation 'com.github.ImagineAR:iar-core-android-beta:1.7.4'
-    implementation 'com.github.ImagineAR:iar-surface-android-beta:1.7.4'
+    implementation 'com.github.ImagineAR:iar-core-android:1.7.0'
+    implementation 'com.github.ImagineAR:iar-surface-android:1.7.0'
+//    implementation 'com.github.ImagineAR:iar-core-android-beta:1.7.4'
+//    implementation 'com.github.ImagineAR:iar-surface-android-beta:1.7.4'
 
     //Preference
     implementation 'androidx.preference:preference:1.1.1'
