--- a/target-ar-sample/build.gradle
+++ b/target-ar-sample/build.gradle
@@ -12,7 +12,7 @@ android {
         applicationId "com.iar.iarsdksamples"
         minSdk 21
         targetSdk 31
-        versionCode 10
+        versionCode 11
         versionName "1.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -75,8 +75,10 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // IAR dependencies
-    implementation 'com.github.ImagineAR:iar-core-android-beta:1.7.4'
-    implementation 'com.github.ImagineAR:iar-target-android-beta:1.7.4'
+    implementation 'com.github.ImagineAR:iar-core-android:1.7.0'
+    implementation 'com.github.ImagineAR:iar-target-android:1.7.0'
+//    implementation 'com.github.ImagineAR:iar-core-android-beta:1.7.4'
+//    implementation 'com.github.ImagineAR:iar-target-android-beta:1.7.4'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
